--- a/src/View/RegistarResponsavel.form
+++ b/src/View/RegistarResponsavel.form
@@ -213,8 +213,8 @@
             <Property name="text" type="java.lang.String" value="Gravar"/>
           </Properties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="botGravarMouseClicked"/>
             <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="botGravarMousePressed"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="botGravarMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botGravarActionPerformed"/>
           </Events>
         </Component>
@@ -246,10 +246,11 @@
             <Component class="javax.swing.JTable" name="tblResponsavel">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="3" rowCount="0">
+                  <Table columnCount="4" rowCount="0">
                     <Column editable="true" title="Codigo" type="java.lang.Object"/>
                     <Column editable="true" title="Nomes" type="java.lang.Object"/>
                     <Column editable="true" title="Apelido" type="java.lang.Object"/>
+                    <Column editable="true" title="Cargo" type="java.lang.Object"/>
                   </Table>
                 </Property>
               </Properties>
